Added images and formatting to home

--- a/app/src/viewcontrols/home/home.vc.less
+++ b/app/src/viewcontrols/home/home.vc.less
@@ -7,3 +7,30 @@
 
     }
 }
+
+
+.hero {
+    background-image: url('/images/OHenrys-Hero.jpg');
+    background-size: cover;
+    text-align: center;
+    
+    .plat-navbar {
+        background-color: transparent;
+
+        .facebook {
+            background-image: url('/images/facebook.png');
+        }
+
+        .twitter {
+            background-image: url('/images/twitter.png');
+        }
+    }
+    
+    .brand {
+        top: 50%;
+        img {
+            width: 50%;
+            height: 50%;
+        }
+    }
+}
