--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,3 +1,25 @@
 @import '../../node_modules/platypusui/dist/platypus';
 
 @import '../src/viewcontrols/home/home.vc.less';
+
+
+@font-face {
+    font-family: 'BrandonGrotesque-Black';
+    src: url(../../fonts/BrandonGrotesque-Black.otf);
+    src: url(../../fonts/BrandonGrotesque-Black.ttf);
+    src: url(../../fonts/BrandonGrotesque-Black.woff);
+}
+
+@font-face {
+    font-family: 'Roboto Condensed';
+    src: url(../../fonts/Roboto-Condensed.otf);
+    src: url(../../fonts/Roboto-Condensed.ttf);
+    src: url(../../fonts/Roboto-Condensed.woff); 
+}
+
+@font-face {
+    font-family: 'WorkSans Bold';
+    src: url(../../fonts/WorkSans-Bold.otf);
+    src: url(../../fonts/WorkSans-Bold.ttf);
+    src: url(../../fonts/WorkSans-Bold.woff);   
+}
