--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -4,10 +4,10 @@
 
 
 @font-face {
-    font-family: 'BrandonGrotesque-Black';
-    src: url(../../fonts/BrandonGrotesque-Black.otf);
-    src: url(../../fonts/BrandonGrotesque-Black.ttf);
-    src: url(../../fonts/BrandonGrotesque-Black.woff);
+    font-family: 'Brandon Grotesque';
+    src: url(../../fonts/HVD Fonts - BrandonGrotesque-Black.otf);
+    src: url(../../fonts/HVD Fonts - BrandonGrotesque-Black.ttf);
+    src: url(../../fonts/HVD Fonts - BrandonGrotesque-Black.woff);
 }
 
 @font-face {
