--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -5,21 +5,19 @@
 
 @font-face {
     font-family: 'Brandon Grotesque';
-    src: url(../../fonts/HVD Fonts - BrandonGrotesque-Black.otf);
-    src: url(../../fonts/HVD Fonts - BrandonGrotesque-Black.ttf);
-    src: url(../../fonts/HVD Fonts - BrandonGrotesque-Black.woff);
+    src: url(../../fonts/Brandon_blk.otf);
 }
 
 @font-face {
     font-family: 'Roboto Condensed';
     src: url(../../fonts/Roboto-Condensed.otf);
-    src: url(../../fonts/Roboto-Condensed.ttf);
-    src: url(../../fonts/Roboto-Condensed.woff); 
 }
 
 @font-face {
     font-family: 'WorkSans Bold';
-    src: url(../../fonts/WorkSans-Bold.otf);
-    src: url(../../fonts/WorkSans-Bold.ttf);
-    src: url(../../fonts/WorkSans-Bold.woff);   
+    src: url(../../fonts/WorkSans-Bold.otf); 
 }
+
+
+@primary-color: #a44b1f;
+@secondary-color: white;
